completed decoupling the scripts. ready for moving to cloud.

--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -1458,7 +1458,10 @@
     "- I have created a different main.py file so that I can start single run to debug via python3 but not jupyter notebook. Currentlly I am having temprarry internet connection issues which I bealive has nothing to do with my code.\n",
     "- Ok after connecting my computer to ethernet, I gat stable connection and program worked fine for single run. more over the error management and saving the .h5 file ro wandb seems to be working via python3 script.\n",
     "- Of the convolutional network is huge. ~270mb :/\n",
-    "- I have also carried out the inital config section to main.py so that insingle run I can try single configuration but in sweep it can get the configuration from the sweep controller."
+    "- I have also carried out the inital config section to main.py so that insingle run I can try single configuration but in sweep it can get the configuration from the sweep controller.\n",
+    "- So the sweep dashboard is [this](https://app.wandb.ai/hakanonal/geodashml/sweeps/g2ftdi6z)\n",
+    "- The code is working on my local environment.\n",
+    "- From this point I need to work it on cloud server. In my local I have chrome installed, we will see How are we going to overcome to install chrome on ubuntu."
    ]
   },
   {
