journalling and adding the requirements.txt

--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -1465,6 +1465,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "bummer10.05.2020\n",
+    "\n",
+    "- I am starting the day with my cloud server on google cloud. For my previous project I got it installed ubuntu. I will try to install code there and try to execute. I am pretty sure that I need to also install the chromedriver there. I will first install chromedriver there and see what error it will give.\n",
+    "- I needed to remember how to keep code and environment files via [this](https://stackoverflow.com/questions/40332383/where-do-i-store-my-python-program-files-when-using-a-virtual-environment) page\n",
+    "- Great! I even do not have github installed. First need to do that. Check [this](https://www.digitalocean.com/community/tutorials/how-to-install-git-on-ubuntu-18-04)\n",
+    "- However I did not fully understand how should I put files. First I have created environment then tried to clone but I got the error \"fatal: destination path '.' already exists and is not an empty directory.\". So I will try vice versa, and it did work. First git clone then environment creation.\n",
+    "- I am starting to learn working with git repos and I have just found that requirements.txt will be very handy for your project to install all dependecies with single command. [This](https://medium.com/@boscacci/why-and-how-to-make-a-requirements-txt-f329c685181e) page is helpful for me\n",
+    "- By the way I have ran out of space on my cloud server. Bummer!\n",
+    "- Yeap my previpus project has collected lot's of data (about 4gb) for wandb. So I have deleted them since they are already in my wandb account. I bealive that directory is being only kept temprary for sending it async to wandb services.\n",
+    "- Well tensorflow is very space intensive module. I had to also delete all of the old project. To learn it better I will delte everything and fast deploy via git clone create environment and install modules via requirements.txt"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
