environmental adjustmant and journaling.

--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -1468,7 +1468,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "bummer10.05.2020\n",
+    "wbummer10.05.2020\n",
     "\n",
     "- I am starting the day with my cloud server on google cloud. For my previous project I got it installed ubuntu. I will try to install code there and try to execute. I am pretty sure that I need to also install the chromedriver there. I will first install chromedriver there and see what error it will give.\n",
     "- I needed to remember how to keep code and environment files via [this](https://stackoverflow.com/questions/40332383/where-do-i-store-my-python-program-files-when-using-a-virtual-environment) page\n",
@@ -1477,7 +1477,20 @@
     "- I am starting to learn working with git repos and I have just found that requirements.txt will be very handy for your project to install all dependecies with single command. [This](https://medium.com/@boscacci/why-and-how-to-make-a-requirements-txt-f329c685181e) page is helpful for me\n",
     "- By the way I have ran out of space on my cloud server. Bummer!\n",
     "- Yeap my previpus project has collected lot's of data (about 4gb) for wandb. So I have deleted them since they are already in my wandb account. I bealive that directory is being only kept temprary for sending it async to wandb services.\n",
-    "- Well tensorflow is very space intensive module. I had to also delete all of the old project. To learn it better I will delte everything and fast deploy via git clone create environment and install modules via requirements.txt"
+    "- Well tensorflow is very space intensive module. I had to also delete all of the old project. To learn it better I will delte everything and fast deploy via git clone create environment and install modules via requirements.txt\n",
+    "- And it seems that I have succesfully deployed my code to server according to best conventions. I got the error that chromedriver can not be found so now I will continue to this project specific tasks.\n",
+    "- I have copied the chromedriver that I have downloaded from selenium installation page. And copied to /usr/local/bin, I have also chaged the file permission to 755\n",
+    "- As expected I get an error message from selenium \"Message: Service /usr/local/bin/chromedriver unexpectedly exited. Status code was: 127\" \n",
+    "- From this point Let's see how I will install chrome to ubuntu. Used [this](https://www.fosslinux.com/26274/how-to-install-google-chrome-on-ubuntu.htm) website\n",
+    "- And As I was exptecting, since my ubuntu has no graphical user interface, google chrome requires some dependecies which I bealive they are being exists in graphical version of ubuntu.\n",
+    "- Well it seems that I have overcome that dependency problem by executing the following command \"sudo apt --fix-broken install\"\n",
+    "- After ı have installed \"sudo apt-get install chromium-browser\" however I think the driver version did not much. I got an error message indicated to that.\n",
+    "- I have removed chromium. since I have fixed the dependecies I again applied commands that have mentioned above. \"sudo dpkg -i google-chrome-stable_current_amd64.deb\"\n",
+    "- It seems that the chrome version 81.0.4044.138-1 has been installed so I need to re downloaded the correct version of the driver.\n",
+    "- I see tensorflow warning messages like \"W tensorflow/core/framework/cpu_allocator_impl.cc:81] Allocation of 95158272 exceeds 10% of free system memory.\" that I will check later.\n",
+    "- I think the driver is worked, I get an error on monitor wait step. So Ithink it clicked the greenflag. \n",
+    "- When set off the hide browser paramter I get an error message \"The process started from chrome location /usr/bin/google-chrome is no longer running, so ChromeDriver is assuming that Chrome has crashed.\" I am asuming that since there is no grpahical user interface I get this error message. However When I hide the browser it seems to be working, however it does not get the score monitor element. Assuming because of environmental changes. I will try to throw some more time.sleep lines arround.\n",
+    "- Yesss yesss it is working. first [run](https://app.wandb.ai/hakanonal/geodashml/runs/2rv1tpp9?workspace=user-hakanonal) on server. Yeahn baby.! "
    ]
   },
   {
